# shoudev

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
content/: badges.kdl
content/pages/: about.md  homepage.md
content/posts/: 2023-03-09-test-main.md  2023-03-09-test-post.md  2023-03-26-html-test.md  2023-20-2023-test-post-2.md  2024-03-07-hello-world.md
content/posts/html_test/: frontmatter.toml  post.md
content/posts/test_main/: frontmatter.toml  post.md
content/posts/test_post/: frontmatter.toml  post.md
content/posts/test_post_2/: frontmatter.toml  post.md
content/static/: sonokai.css
frontend/: base.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/src/: index.ts
src/: errors.rs  main.rs
src/code_highlighting/: languages.rs  mod.rs
src/content/: badges.rs  mod.rs
src/markdown/: code_highlight.rs  mod.rs
src/routes/: mod.rs
src/templates/: mod.rs
static/: sonokai.css
templates/: base.html  generic.html  homepage.html  post_test.html  posts_test.html
templates/error_pages/: 404.html  500.html  fallback.html
templates/posts/: post.html  posts.html
