[package]
name = "shoudev-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
dotenv = "0.15.0"
ignore = "0.4.20"
lazy_static = "1.4.0"
pulldown-cmark = { version= "0.9.2", features = ["serde"]}
rusqlite = "0.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tera = "1.18.0"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tree-sitter-highlight = "0.20.1"
tree-sitter-rust = "0.20.3"
